Fix skills section alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -473,8 +473,7 @@ h3 {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 50px;
-
+  row-gap: 50px;
 }
 
 .skill {
@@ -486,7 +485,7 @@ h3 {
 }
 
 .skill i {
-  font-size: 10rem;
+  font-size: 5rem;
 }
 
 .skill span {
@@ -504,15 +503,6 @@ h3 {
   );
   background-clip: text;
   color: transparent;
-}
-
-.figma i,
-.html i,
-.css i,
-.javascript i,
-.git i,
-.react i {
-  font-size: 5rem;
 }
 
 .html i {
